--- a/coordinator/Makefile
+++ b/coordinator/Makefile
@@ -15,14 +15,16 @@ endif
 ZK_VERSION=${ZKEVM_VERSION}-${HALO2_VERSION}
 
 pre-upgrade-zk:
-	cd ./internal/logic/verifier/lib && mv libzkp.so liboldzkp.so && mv libzktrie.so liboldzktrie.so
+	cd ../common/libzkp/impl && cargo clean && cargo build --release && cp ./target/release/libzkp.so ../interface/liboldzkp.so
+	cp -r ../common/libzkp/interface ./internal/logic/verifier/lib
+	find ../common | grep libzktrie.so | xargs -I{} cp {} ./internal/logic/verifier/lib/liboldzktrie.so
 	OLD_ZK_VERSION=$(ZK_VERSION)
 
 test:
 	go test -v -race -coverprofile=coverage.txt -covermode=atomic -p 1 $(PWD)/...
 
 libzkp: pre-upgrade-zk
-	cd ../common/libzkp/impl && cargo clean && cargo build --release && cp ./target/release/libzkp.so ../interface/
+	cd ../common/libzkp/impl && mv Cargo.lock Cargo.lock.old && mv Cargo.lock.new Cargo.lock && cargo clean && cargo build --release && cp ./target/release/libzkp.so ../interface/
 	cp -r ../common/libzkp/interface ./internal/logic/verifier/lib
 	find ../common | grep libzktrie.so | xargs -I{} cp {} ./internal/logic/verifier/lib
 
