fix coordinator version in docker

--- a/coordinator/Makefile
+++ b/coordinator/Makefile
@@ -1,4 +1,4 @@
-.PHONY: lint docker clean coordinator mock_coordinator
+.PHONY: lint docker clean coordinator coordinator_skip_libzkp mock_coordinator
 
 IMAGE_NAME=coordinator
 IMAGE_VERSION=latest
@@ -23,6 +23,9 @@ libzkp:
 	find ../common | grep libzktrie.so | xargs -I{} cp {} ./internal/logic/verifier/lib
 
 coordinator: libzkp ## Builds the Coordinator instance.
+	go build -ldflags "-X scroll-tech/common/version.ZkVersion=${ZK_VERSION}" -o $(PWD)/build/bin/coordinator ./cmd
+
+coordinator_skip_libzkp:
 	go build -ldflags "-X scroll-tech/common/version.ZkVersion=${ZK_VERSION}" -o $(PWD)/build/bin/coordinator ./cmd
 
 mock_coordinator: ## Builds the mocked Coordinator instance.
