--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -16,8 +16,7 @@ on:
 
 jobs:
   tests:
-    # if: github.event.pull_request.draft == false
-    if: false
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
     - name: Install Go
