--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -43,6 +43,8 @@ jobs:
         version: '0.8.16'
     - name: Install Geth Tools
       uses: gacts/install-geth-tools@v1
+      with:
+        version: 1.10.19
     - name: Lint
       working-directory: 'bridge'
       run: |
@@ -92,6 +94,8 @@ jobs:
         version: '0.8.16'
     - name: Install Geth Tools
       uses: gacts/install-geth-tools@v1
+      with:
+        version: 1.10.19
     - name: Build prerequisites
       run: |
         make dev_docker
