ci: update auto bump workflow

--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -3,6 +3,11 @@ name: Bump Version
 on:
   pull_request:
     branches: [develop]
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 
 jobs:
   check:
