--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
       - name: check diff
         id: check_diff
         run: |
@@ -49,7 +51,11 @@ jobs:
       - name: bump version in common/version/version.go
         if: steps.check_diff.outputs.result == 'bump'
         run: node .github/scripts/bump_version_dot_go.mjs
+
+        # Commits made by this Action do not trigger new Workflow runs
       - uses: stefanzweifel/git-auto-commit-action@3ea6ae190baf489ba007f7c92608f33ce20ef04a
         if: steps.check_diff.outputs.result == 'bump'
         with:
+          skip_fetch: true # already did fetch in check diff
+          file_pattern: "common/version/version.go"
           commit_message: "chore: auto version bump [bot]"
