--- a/bridge/conf/config.json
+++ b/bridge/conf/config.json
@@ -2,6 +2,7 @@
   "l1_config": {
     "confirmations": "0x6",
     "endpoint": "DUMMY_ENDPOINT",
+    "l1_message_queue_address": "0x0000000000000000000000000000000000000000",
     "scroll_chain_address": "0x0000000000000000000000000000000000000000",
     "start_height": 0,
     "relayer_config": {
