--- a/.github/workflows/coordinator.yml
+++ b/.github/workflows/coordinator.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - 'coordinator/**'
       - 'common/**'
+      - '!common/version/**'
       - 'database/**'
       - '.github/workflows/coordinator.yml'
   pull_request:
@@ -21,6 +22,7 @@ on:
     paths:
       - 'coordinator/**'
       - 'common/**'
+      - '!common/version/**'
       - 'database/**'
       - '.github/workflows/coordinator.yml'
 
