--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -2,15 +2,12 @@ name: Bump Version
 
 on:
   pull_request:
-    branches: [develop]
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - ready_for_review
+    branches: [ develop ]
+    types: [ labeled ]
 
 jobs:
   try-to-bump:
+    if: ${{ github.event.label.name == 'bump-version' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
