--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -9,7 +9,7 @@ on:
       - alpha
     paths:
       - 'common/**'
-      - '!common/version/**'
+      - '!common/version/version.go'
       - '.github/workflows/common.yml'
   pull_request:
     types:
@@ -19,7 +19,7 @@ on:
       - ready_for_review
     paths:
       - 'common/**'
-      - '!common/version/**'
+      - '!common/version/version.go'
       - '.github/workflows/common.yml'
 
 jobs:
