--- a/.github/workflows/database.yml
+++ b/.github/workflows/database.yml
@@ -10,7 +10,7 @@ on:
     paths:
       - 'database/**'
       - 'common/**'
-      - '!common/version/**'
+      - '!common/version/version.go'
       - '.github/workflows/database.yml'
   pull_request:
     types:
@@ -21,7 +21,7 @@ on:
     paths:
       - 'database/**'
       - 'common/**'
-      - '!common/version/**'
+      - '!common/version/version.go'
       - '.github/workflows/database.yml'
 
 jobs:
