--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -10,6 +10,7 @@ on:
     paths:
       - 'bridge/**'
       - 'common/**'
+      - '!common/version/version.go'
       - 'database/**'
       - '.github/workflows/bridge.yml'
   pull_request:
@@ -21,6 +22,7 @@ on:
     paths:
       - 'bridge/**'
       - 'common/**'
+      - '!common/version/version.go'
       - 'database/**'
       - '.github/workflows/bridge.yml'
 
