--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -3,7 +3,11 @@ name: Bump Version
 on:
   pull_request:
     branches: [ develop ]
-    types: [ labeled ]
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 
 jobs:
   try-to-bump:
