fix(ci): enable the bump-version bot when PR is updated (#905)
Co-authored-by: icemelon <icemelon@users.noreply.github.com>
Co-authored-by: HAOYUatHZ <37070449+HAOYUatHZ@users.noreply.github.com>

--- a/.github/workflows/bump_version.yml
+++ b/.github/workflows/bump_version.yml
@@ -3,11 +3,16 @@ name: Bump Version
 on:
   pull_request:
     branches: [ develop ]
-    types: [ labeled ]
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+      - labeled
 
 jobs:
   try-to-bump:
-    if: ${{ github.event.label.name == 'bump-version' }}
+    if: contains(github.event.pull_request.labels.*.name, 'bump-version')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
