--- a/prover-stats-api/Makefile
+++ b/prover-stats-api/Makefile
@@ -4,6 +4,8 @@ IMAGE_NAME=prover-stats-api
 IMAGE_VERSION=latest
 REPO_ROOT_DIR=./..
 
+all: build
+
 build:
 	GOBIN=$(PWD)/build/bin go build -o $(PWD)/build/bin/prover-stats-api ./cmd
 
@@ -21,3 +23,5 @@ lint: ## Lint the files - used for CI
 
 docker:
 	DOCKER_BUILDKIT=1 docker build -t scrolltech/${IMAGE_NAME}:${IMAGE_VERSION} ${REPO_ROOT_DIR}/ -f ${REPO_ROOT_DIR}/build/dockerfiles/prover-stats-api.Dockerfile
+
+.PHONY: all
