--- a/rollup/conf/config.json
+++ b/rollup/conf/config.json
@@ -65,7 +65,8 @@
       "gas_cost_increase_multiplier": 1.2
     },
     "chunk_proposer_config": {
-      "max_tx_num_per_chunk": 1123,
+      "max_block_num_per_chunk": 100,
+      "max_tx_num_per_chunk": 100,
       "max_l1_commit_gas_per_chunk": 11234567,
       "max_l1_commit_calldata_size_per_chunk": 112345,
       "chunk_timeout_sec": 300,
