--- a/bridge-history-api/config.json
+++ b/bridge-history-api/config.json
@@ -30,7 +30,7 @@
 		"ERC1155GatewayAddr": "0x4f33B1655619c2C0B7C450128Df760B4365Cb549"
 	},
 	"db": {
-		"dsn": "postgres://localhost/scroll?sslmode=disable",
+		"dsn": "postgres://postgres:1234@localhost:5444/test?sslmode=disable",
 		"driverName": "postgres",
 		"maxOpenNum": 200,
 		"maxIdleNum": 20
