--- a/rollup/conf/config.json
+++ b/rollup/conf/config.json
@@ -54,7 +54,7 @@
         "gas_price_diff": 50000
       },
       "chain_monitor": {
-        "enable": false,
+        "enabled": false,
         "timeout": 3,
         "try_times": 5,
         "base_url": "http://localhost:8750"
