--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -111,7 +111,7 @@ jobs:
         tags: scrolltech/bridgehistoryapi-server:${{github.ref_name}}
         # cache-from: type=gha,scope=${{ github.workflow }}
         # cache-to: type=gha,scope=${{ github.workflow }}
-  coordinator:
+  coordinator-api:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -127,8 +127,29 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: ./build/dockerfiles/coordinator.Dockerfile
+        file: ./build/dockerfiles/coordinator-api.Dockerfile
         push: true
-        tags: scrolltech/coordinator:${{github.ref_name}}
+        tags: scrolltech/coordinator-api:${{github.ref_name}}
+        # cache-from: type=gha,scope=${{ github.workflow }}
+        # cache-to: type=gha,scope=${{ github.workflow }}
+  coordinator-cron:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push coordinator docker
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./build/dockerfiles/coordinator-cron.Dockerfile
+        push: true
+        tags: scrolltech/coordinator-cron:${{github.ref_name}}
         # cache-from: type=gha,scope=${{ github.workflow }}
         # cache-to: type=gha,scope=${{ github.workflow }}
