--- a/common/libzkp/impl/Cargo.toml
+++ b/common/libzkp/impl/Cargo.toml
@@ -7,10 +7,29 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[dependencies]
+base64 = "0.13.0"
+env_logger = "0.9.0"
+libc = "0.2"
+log = "0.4"
+once_cell = "1.8.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0.107"
+
+halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop"  }
+prover = { git = "https://github.com/scroll-tech/zkevm-circuits.git", branch = "mem-leak-test", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+jemallocator = {version = "0.3", features = ["disable_initial_exec_tls"]}
+
 [patch.crates-io]
 ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
 [patch."https://github.com/privacy-scaling-explorations/halo2.git"]
 halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
+# halo2_proofs = { path = "/home/scroll/steven/halo2-gpu/halo2_proofs" }
+# [patch."https://github.com/scroll-tech/halo2.git"]
+# halo2_proofs = { path = "/home/scroll/steven/halo2-gpu/halo2_proofs" }
 [patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
 poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }
 [patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
@@ -19,21 +38,10 @@ maingate = { git = "https://github.com/scroll-tech/halo2wrong", branch = "halo2-
 [patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
 halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }
 
-[dependencies]
-halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
-prover = { git = "https://github.com/scroll-tech/zkevm-circuits.git", tag = "v0.9.7", default-features = false, features = ["parallel_syn", "scroll", "shanghai"] }
-
-base64 = "0.13.0"
-env_logger = "0.9.0"
-libc = "0.2"
-log = "0.4"
-once_cell = "1.8.0"
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = "1.0.66"
-
 [profile.test]
 opt-level = 3
+debug-assertions = true
 
 [profile.release]
 opt-level = 3
+debug-assertions = true
