--- a/bridge-history-api/config.json
+++ b/bridge-history-api/config.json
@@ -1,45 +1,54 @@
 {
-	"batchInfoFetcher": {
-		"batchIndexStartBlock": 9091265,
-		"ScrollChainAddr": "0x1799c3Df650caB9DFBb228C971016707D8f8721D"
-	},
-	"l1": {
+	"L1": {
+		"chain_id": 1,
 		"confirmation": 64,
 		"endpoint": "https://rpc.ankr.com/eth",
-		"startHeight": 18310747,
+		"startHeight": 18332000,
 		"blockTime": 10,
-		"MessengerAddr": "0x7318152B19c3c97c886D5ee6C2525E62ce8e2abA",
-		"ETHGatewayAddr": "0xd165b42d857eae2915625819464a2a1f91E5d0A5",
-		"WETHGatewayAddr": "0xb0255e4C1a919619D1CafBA51021d638c4F71b89",
-		"StandardERC20Gateway": "0x00fEc01A9b975bA37466B4E9006dF2C71BFE0e48",
-		"CustomERC20GatewayAddr": "0xD8874B0E6C3CC43C00B69D60c21Ef452d1159bDe",
-		"ERC721GatewayAddr": "0x131B46649F6882d686a766cb8b68c4cB0ACdeb24",
-		"ERC1155GatewayAddr": "0xCeE721789FAA05c7F4463efB664520656aB7C7d5",
-		"USDCGatewayAddr": "0x37ba659D6CC380D12Fb96567CC52FC8e1DF4E334",
-		"LIDOGatewayAddr": "0x892dDB2899325aBBA1fD00FDA8249B40Cbbc33F9",
-		"DAIGatewayAddr": "0xD8dD7787f89c7E6243AD32E0d0cCf460243C8130"
+		"fetchLimit": 30,
+		"MessengerAddr": "0x6774Bcbd5ceCeF1336b5300fb5186a12DDD8b367",
+		"ETHGatewayAddr": "0x7F2b8C31F88B6006c382775eea88297Ec1e3E905",
+		"WETHGatewayAddr": "0x7AC440cAe8EB6328de4fA621163a792c1EA9D4fE",
+		"StandardERC20Gateway": "0xD8A791fE2bE73eb6E6cF1eb0cb3F36adC9B3F8f9",
+		"CustomERC20GatewayAddr": "0xb2b10a289A229415a124EFDeF310C10cb004B6ff",
+		"ERC721GatewayAddr": "0x6260aF48e8948617b8FA17F4e5CEa2d21D21554B",
+		"ERC1155GatewayAddr": "0xb94f7F6ABcb811c5Ac709dE14E37590fcCd975B6",
+		"USDCGatewayAddr": "0xf1AF3b23DE0A5Ca3CAb7261cb0061C0D779A5c7B",
+		"LIDOGatewayAddr": "0x6625C6332c9F91F2D27c304E729B86db87A3f504",
+		"DAIGatewayAddr": "0x67260A8B73C5B77B55c1805218A42A7A6F98F515",
+		"ScrollChainAddr": "0x1799c3Df650caB9DFBb228C971016707D8f8721D",
+		"GatewayRouterAddr": "0xF8B1378579659D8F7EE5f3C929c2f3E332E41Fd6",
+		"MessageQueueAddr": "0x0d7E906BD9cAFa154b048cFa766Cc1E54E39AF9B"
 	},
-	"l2": {
+	"L2": {
+		"chain_id": 534352,
 		"confirmation": 1,
 		"endpoint": "http://mainnet-l2geth-internal-1.mainnet.scroll.tech:8545",
-		"blockTime": 3,
 		"startHeight": 0,
-		"MessengerAddr": "0xda7c91Ed60DACD28Cb97B180108958c9ACC7698a",
-		"ETHGatewayAddr": "0x567671187b5FFbcDFe0B6EcF3e56C05508a31A87",
-		"WETHGatewayAddr": "0x3b03aE2F27d62E0B2b6740CA20Fc07Af4338B791",
-		"StandardERC20Gateway": "0xb00cb1F6f7C43D2EE8C4e2163a6bEA22441A5B7c",
-		"CustomERC20GatewayAddr": "0x63CCb38E9d21A72777b203267F2e4ba5C974fC62",
-		"ERC721GatewayAddr": "0xE2c36a2D8B5528719aE7A42A778b2D08b18d134a",
-		"ERC1155GatewayAddr": "0xfF14870512e42BFb85a9B7bEfDc06e9aB5A37269",
-		"USDCGatewayAddr": "0x97D5799CDC8eE2A7452913d7548c7cEE285719FA",
-		"LIDOGatewayAddr": "0xE9c5C9f67ec7B773fC76440845751F657bb953FF",
-		"DAIGatewayAddr": "0xC5034eB8F682b73F93C9246aa95A8eBbF82793aA"
+		"blockTime": 3,
+		"fetchLimit": 100,
+		"MessengerAddr": "0x781e90f1c8Fc4611c9b7497C3B47F99Ef6969CbC",
+		"ETHGatewayAddr": "0x6EA73e05AdC79974B931123675ea8F78FfdacDF0",
+		"WETHGatewayAddr": "0x7003E7B7186f0E6601203b99F7B8DECBfA391cf9",
+		"StandardERC20Gateway": "0xE2b4795039517653c5Ae8C2A9BFdd783b48f447A",
+		"CustomERC20GatewayAddr": "0x64CCBE37c9A82D85A1F2E74649b7A42923067988",
+		"ERC721GatewayAddr": "0x7bC08E1c04fb41d75F1410363F0c5746Eae80582",
+		"ERC1155GatewayAddr": "0x62597Cc19703aF10B58feF87B0d5D29eFE263bcc",
+		"USDCGatewayAddr": "0x33B60d5Dd260d453cAC3782b0bDC01ce84672142",
+		"LIDOGatewayAddr": "0x8aE8f22226B9d789A36AC81474e633f8bE2856c9",
+		"DAIGatewayAddr": "0xaC78dff3A87b5b534e366A93E785a0ce8fA6Cc62",
+		"GatewayRouterAddr": "0x4C0926FF5252A435FD19e10ED15e5a249Ba19d79"
 	},
 	"db": {
-		"dsn": "postgres://postgres:1234@localhost:5444/test?sslmode=disable",
+		"dsn": "postgres://postgres:123456@localhost:5444/test?sslmode=disable",
 		"driverName": "postgres",
 		"maxOpenNum": 200,
 		"maxIdleNum": 20
+	},
+	"redis": {
+		"address": "localhost:6379",
+		"password": "",
+		"db": 0
 	},
 	"server": {
 		"hostPort": "20006"
