--- a/codecov.yml
+++ b/codecov.yml
@@ -36,3 +36,8 @@ flag_management:
         - type: project
           target: auto
           threshold: 1%
+    - name: contracts
+      statuses:
+        - type: project
+          target: auto
+          threshold: 1%
